<?xml version="1.0" encoding="utf-8"?>
<!--
  HeadSet
  Copyright (C) Carles Sentis 2011 <codeskraps@gmail.com>
 
  HeadSet is free software: you can
  redistribute it and/or modify it under the terms
  of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of
  the License, or (at your option) any later
  version.
   
  HeadSet is distributed in the hope that it
  will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details.
   
  You should have received a copy of the GNU
  General Public License along with this program.
  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <string name="app_name">HeadSet</string>
    <string name="iconImageDescription">Icon</string>
    <string name="catGeneral">General settings</string>
    <string name="autoStart">Auto-start after system boot up</string>
    <string name="wakeUp">Wake up phone and bypass the lock screen on auto-start app</string>
    <string name="powerConnected">Trigger only if usb is connected</string>
    <string name="catConnected">On headset connected</string>
    <string name="conVolume">Set media volume</string>
    <string name="setphonevibrate">Set the phone on vibrate</string>
    <string name="catDisconnected">On headset disconnected</string>
    <string name="autoRotate">Auto-rotate screen</string>
    <string name="btnDone">Done</string>

    <string-array name="onOff">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string name="autostartapp">Auto-start app</string>
    <string name="startService">Start</string>
    <string name="menuFeedback">Feedback</string>
    <string name="menuBuyMeAPint">Buy me a beer</string>
    <string name="donationSummary">HeadSet is a free and open source app. You can support it with a small donation.\n\nAny donations will help to keep my apps free and regularly updated.\n\nDonation is easy: touch any of the beers below and you will be redirected to Google Play where you can make a little Donation.</string>
    <string name="donationOne">€ 1.00</string>
    <string name="donationTwo">€ 2.00</string>
    <string name="donationFive">€ 5.00</string>
    <string name="donationTen">€ 10.00</string>

</resources>