<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#222222"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/iconImageDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="@color/themeColor"
            android:textSize="25dp"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#666666"
        android:orientation="horizontal" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_tab_indicator_unselected_pressed"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/catGeneral"
                    android:textColor="@color/themeColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/chkAutoStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autoStart" />

                <CheckBox
                    android:id="@+id/chkWakeUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wakeUp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#666666"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_tab_indicator_unselected_pressed"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/catConnected"
                    android:textColor="@color/themeColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/chkConAutoRotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autoRotate" />

                <Spinner
                    android:id="@+id/spnConAutoOnOff"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/chkConApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autostartapp" />

                <Button
                    android:id="@+id/btnConApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <CheckBox
                    android:id="@+id/chkConMediaVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conVolume" />
            
            <SeekBar
                android:id="@+id/skbConVolume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/progress"
                android:max="100" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#666666"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_tab_indicator_unselected_pressed"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/catDisconnected"
                    android:textColor="@color/themeColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/chkDisAutoRotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autoRotate" />

                <Spinner
                    android:id="@+id/spnDisAutoOnOff"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#666666"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnStartService"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.1"
            android:text="@string/startService" />
    </LinearLayout>

</LinearLayout>